--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Compiled and minified CSS -->
   <!-- Compressed CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation-float.min.css"
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css"
 
     crossorigin="anonymous">
   <!--
